[gd_scene load_steps=8 format=3 uid="uid://game_scene"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_game"]
[ext_resource type="Script" path="res://scripts/entities/player.gd" id="2_player"]
[ext_resource type="Script" path="res://scripts/enemy_spawner.gd" id="3_spawner"]
[ext_resource type="Script" path="res://scripts/pickup_spawner.gd" id="4_pickup"]
[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="5_hud"]
[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="6_pause"]
[ext_resource type="Script" path="res://scripts/ui/level_up_modal.gd" id="7_levelup"]
[ext_resource type="Script" path="res://scripts/ui/game_over_screen.gd" id="8_gameover"]
[ext_resource type="Script" path="res://scripts/ui/virtual_joystick.gd" id="9_joystick"]

[sub_resource type="CircleShape2D" id="CircleShape2D_player_hitbox"]
radius = 15.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pickup_area"]
radius = 50.0

[node name="Game" type="Node2D"]
script = ExtResource("1_game")

[node name="TileMap" type="TileMap" parent="."]

[node name="Player" type="CharacterBody2D" parent="."]
script = ExtResource("2_player")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CircleShape2D_player_hitbox")

[node name="Hitbox" type="Area2D" parent="Player"]
collision_layer = 1
collision_mask = 2

[node name="HitboxShape" type="CollisionShape2D" parent="Player/Hitbox"]
shape = SubResource("CircleShape2D_player_hitbox")

[node name="PickupArea" type="Area2D" parent="Player"]
collision_layer = 1
collision_mask = 4

[node name="PickupShape" type="CollisionShape2D" parent="Player/PickupArea"]
shape = SubResource("CircleShape2D_pickup_area")

[node name="WeaponContainer" type="Node2D" parent="Player"]

[node name="HurtTimer" type="Timer" parent="Player"]
one_shot = true

[node name="RegenTimer" type="Timer" parent="Player"]

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="EnemySpawner" type="Node2D" parent="."]
script = ExtResource("3_spawner")

[node name="PickupSpawner" type="Node2D" parent="."]
script = ExtResource("4_pickup")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="CanvasLayer" parent="UI"]
script = ExtResource("5_hud")

[node name="MainPanel" type="PanelContainer" parent="UI/HUD"]
offset_left = 10.0
offset_top = 10.0
offset_right = 170.0
offset_bottom = 70.0

[node name="Bars" type="VBoxContainer" parent="UI/HUD/MainPanel"]
layout_mode = 2

[node name="HealthBar" type="ProgressBar" parent="UI/HUD/MainPanel/Bars"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthText" type="Label" parent="UI/HUD/MainPanel/Bars/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="XPBar" type="ProgressBar" parent="UI/HUD/MainPanel/Bars"]
custom_minimum_size = Vector2(150, 15)
layout_mode = 2
max_value = 10.0
show_percentage = false

[node name="XPText" type="Label" parent="UI/HUD/MainPanel/Bars/XPBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "0/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoldPanel" type="PanelContainer" parent="UI/HUD"]
offset_left = 10.0
offset_top = 80.0
offset_right = 100.0
offset_bottom = 110.0

[node name="HBox" type="HBoxContainer" parent="UI/HUD/GoldPanel"]
layout_mode = 2

[node name="GoldIcon" type="Label" parent="UI/HUD/GoldPanel/HBox"]
layout_mode = 2
text = "ü™ô"

[node name="GoldText" type="Label" parent="UI/HUD/GoldPanel/HBox"]
layout_mode = 2
text = "0"

[node name="StatsPanel" type="VBoxContainer" parent="UI/HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 100.0
grow_horizontal = 0
alignment = 2

[node name="LevelText" type="Label" parent="UI/HUD/StatsPanel"]
layout_mode = 2
text = "Lv.1"
horizontal_alignment = 2

[node name="KillsText" type="Label" parent="UI/HUD/StatsPanel"]
layout_mode = 2
text = "üíÄ 0"
horizontal_alignment = 2

[node name="TimerText" type="Label" parent="UI/HUD/StatsPanel"]
layout_mode = 2
text = "‚è±Ô∏è 00:00"
horizontal_alignment = 2

[node name="WeaponSlots" type="HBoxContainer" parent="UI/HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0

[node name="BookSlots" type="HBoxContainer" parent="UI/HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -110.0
offset_right = 100.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 0

[node name="PauseBtn" type="Button" parent="UI/HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.0
offset_top = 10.0
offset_right = 25.0
offset_bottom = 50.0
grow_horizontal = 2
text = "‚è∏Ô∏è"

[node name="PauseMenu" type="CanvasLayer" parent="UI"]
layer = 10
script = ExtResource("6_pause")

[node name="Panel" type="PanelContainer" parent="UI/PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="UI/PauseMenu/Panel"]
layout_mode = 2

[node name="Title" type="Label" parent="UI/PauseMenu/Panel/VBox"]
layout_mode = 2
text = "‚è∏Ô∏è ÿ•ŸäŸÇÿßŸÅ ŸÖÿ§ŸÇÿ™"
horizontal_alignment = 1

[node name="StatsPanel" type="PanelContainer" parent="UI/PauseMenu/Panel/VBox"]
layout_mode = 2

[node name="Stats" type="VBoxContainer" parent="UI/PauseMenu/Panel/VBox/StatsPanel"]
layout_mode = 2

[node name="HP" type="Label" parent="UI/PauseMenu/Panel/VBox/StatsPanel/Stats"]
layout_mode = 2
text = "‚ù§Ô∏è 100/100"

[node name="DMG" type="Label" parent="UI/PauseMenu/Panel/VBox/StatsPanel/Stats"]
layout_mode = 2
text = "‚öîÔ∏è 100%"

[node name="DEF" type="Label" parent="UI/PauseMenu/Panel/VBox/StatsPanel/Stats"]
layout_mode = 2
text = "üõ°Ô∏è 0%"

[node name="LUCK" type="Label" parent="UI/PauseMenu/Panel/VBox/StatsPanel/Stats"]
layout_mode = 2
text = "üçÄ 1.0"

[node name="CRIT" type="Label" parent="UI/PauseMenu/Panel/VBox/StatsPanel/Stats"]
layout_mode = 2
text = "üí• 5%"

[node name="SPD" type="Label" parent="UI/PauseMenu/Panel/VBox/StatsPanel/Stats"]
layout_mode = 2
text = "üëü 100%"

[node name="GOLD" type="Label" parent="UI/PauseMenu/Panel/VBox/StatsPanel/Stats"]
layout_mode = 2
text = "üí∞ 0"

[node name="KILLS" type="Label" parent="UI/PauseMenu/Panel/VBox/StatsPanel/Stats"]
layout_mode = 2
text = "üíÄ 0"

[node name="Controls" type="VBoxContainer" parent="UI/PauseMenu/Panel/VBox"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="UI/PauseMenu/Panel/VBox/Controls"]
layout_mode = 2
text = "üéµ ÿßŸÑŸÖŸàÿ≥ŸäŸÇŸâ"

[node name="MusicSlider" type="HSlider" parent="UI/PauseMenu/Panel/VBox/Controls"]
layout_mode = 2
max_value = 100.0
value = 50.0

[node name="SFXLabel" type="Label" parent="UI/PauseMenu/Panel/VBox/Controls"]
layout_mode = 2
text = "üîä ÿßŸÑŸÖÿ§ÿ´ÿ±ÿßÿ™"

[node name="SFXSlider" type="HSlider" parent="UI/PauseMenu/Panel/VBox/Controls"]
layout_mode = 2
max_value = 100.0
value = 70.0

[node name="Buttons" type="VBoxContainer" parent="UI/PauseMenu/Panel/VBox"]
layout_mode = 2

[node name="ResumeBtn" type="Button" parent="UI/PauseMenu/Panel/VBox/Buttons"]
layout_mode = 2
text = "‚ñ∂Ô∏è ÿßÿ≥ÿ™ŸÖÿ±ÿßÿ±"

[node name="QuitBtn" type="Button" parent="UI/PauseMenu/Panel/VBox/Buttons"]
layout_mode = 2
text = "üö™ ÿÆÿ±Ÿàÿ¨"

[node name="LevelUpModal" type="CanvasLayer" parent="UI"]
layer = 20
script = ExtResource("7_levelup")

[node name="Panel" type="PanelContainer" parent="UI/LevelUpModal"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="UI/LevelUpModal/Panel"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="UI/LevelUpModal/Panel/VBox"]
layout_mode = 2
text = "üéâ ŸÖÿ≥ÿ™ŸàŸâ ÿ¨ÿØŸäÿØ! üéâ"
horizontal_alignment = 1

[node name="Options" type="HBoxContainer" parent="UI/LevelUpModal/Panel/VBox"]
layout_mode = 2
alignment = 1

[node name="GameOverScreen" type="CanvasLayer" parent="UI"]
layer = 30
script = ExtResource("8_gameover")

[node name="Panel" type="PanelContainer" parent="UI/GameOverScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="UI/GameOverScreen/Panel"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="UI/GameOverScreen/Panel/VBox"]
layout_mode = 2
text = "ÿßŸÜÿ™Ÿáÿ™ ÿßŸÑŸÑÿπÿ®ÿ©"
horizontal_alignment = 1

[node name="Stats" type="VBoxContainer" parent="UI/GameOverScreen/Panel/VBox"]
layout_mode = 2

[node name="NameInput" type="LineEdit" parent="UI/GameOverScreen/Panel/VBox"]
layout_mode = 2
placeholder_text = "ÿßÿ≥ŸÖŸÉ ŸáŸÜÿß..."
alignment = 1

[node name="SubmitBtn" type="Button" parent="UI/GameOverScreen/Panel/VBox"]
layout_mode = 2
text = "üì§ ÿ≥ÿ¨ŸÑ ÿßŸÑŸÜÿ™Ÿäÿ¨ÿ©"

[node name="RestartBtn" type="Button" parent="UI/GameOverScreen/Panel/VBox"]
layout_mode = 2
text = "ÿßŸÑÿπÿ® ŸÖÿ±ÿ© ÿ£ÿÆÿ±Ÿâ"

[node name="VirtualJoystick" type="Control" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -180.0
offset_right = 180.0
offset_bottom = -20.0
grow_vertical = 0
script = ExtResource("9_joystick")

[node name="Base" type="TextureRect" parent="UI/VirtualJoystick"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0

[node name="Knob" type="TextureRect" parent="UI/VirtualJoystick/Base"]
layout_mode = 0
offset_left = 44.0
offset_top = 44.0
offset_right = 84.0
offset_bottom = 84.0
